<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Filter">

    <EditText
        android:id="@+id/TopLeftLong"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/longText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionText"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bottom_right_bound"
        app:layout_constraintBottom_toBottomOf="@+id/BottomRightLat"
        app:layout_constraintEnd_toStartOf="@+id/BottomRightLat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/BottomRightLat"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/lat"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/BottomRightLong"
        app:layout_constraintEnd_toStartOf="@+id/BottomRightLong"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TopLeftLat"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="104dp"
        android:layout_height="49dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:onClick="cancel"
        android:text="@string/button_Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BottomRightLong" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_Search"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/captionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editText_Caption"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateText" />

    <EditText
        android:id="@+id/cityText"
        android:layout_width="164dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="City"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/radiusNumber"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/radiusNumber"
        android:layout_width="163dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Search Radius(km)"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.228" />

    <EditText
        android:id="@+id/startDateText"
        android:focusable = "false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editText_Sdate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/endDateText"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editText_Edate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateText" />

    <EditText
        android:id="@+id/BottomRightLong"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/longText"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TopLeftLong"
        app:layout_constraintTop_toBottomOf="@+id/TopLeftLong"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/TopLeftLat"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/lat"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/TopLeftLong"
        app:layout_constraintEnd_toStartOf="@+id/TopLeftLong"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="16dp"
        android:text="@string/top_left_bound"
        app:layout_constraintBottom_toBottomOf="@+id/TopLeftLat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textView_Caption"
        app:layout_constraintBottom_toBottomOf="@+id/captionText"
        app:layout_constraintEnd_toStartOf="@+id/captionText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textView_Sdate"
        app:layout_constraintBottom_toBottomOf="@+id/startDateText"
        app:layout_constraintEnd_toStartOf="@+id/startDateText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textView_Edate"
        app:layout_constraintBottom_toBottomOf="@+id/endDateText"
        app:layout_constraintEnd_toStartOf="@+id/endDateText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BottomRightLat"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="27dp"
        android:layout_height="19dp"
        android:text="and"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.131" />

</androidx.constraintlayout.widget.ConstraintLayout>