<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchResults">

    <EditText
        android:id="@+id/timestamp2"
        android:layout_width="165dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:gravity="right"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/idSearchLocationMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchImageView"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/searchImageView"
        android:layout_width="405dp"
        android:layout_height="405dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/displayImageView_Photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/button_Right"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button_left"
        app:layout_constraintTop_toTopOf="@+id/searchImageView" />

    <ImageButton
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="172dp"
        android:contentDescription="@string/button_Left"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchImageView" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/idSearchLocationMap"
        android:layout_width="0dp"
        android:layout_height="222dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/view_caption"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textView_Caption"
        app:layout_constraintBottom_toTopOf="@+id/idSearchLocationMap"
        app:layout_constraintEnd_toStartOf="@+id/timestamp2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>